# ras2

./: .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  README.rst  cartographer_ros.rosinstall  package.xml  setup.py
action/: FindPerson.action
data/0/: 0001.data  0002.data
data/1/: 0001.data  0002.data
data/2/: 0001.data  0002.data
launch/: RAS_Navigation.launch  casas_log_observer.launch  detect_error.launch  kyoto_detect_error.launch
msg/: Object.msg
params/cartographer_params/: init_RAS_cartographer_params.lua
params/move_base_params/: dwa_local_planner_params.yaml
scripts/: casas.cfg  casas_log_viewer.py  casas_observer.py  error_detector.py  test_error_detector.py
src/: find_person_client.py  hlds_laser_publisher.cpp  hlds_laser_segment_publisher.cpp
src/adl/: __init__.py  detect_error.py
src/adl/util/: __init__.py  constants.py  dag.py  dag_relax.py  items.py  misc.py  rospy_logging.py  status.py
src/adl_error_detection/: README.md  package.xml
src/adl_error_detection/launch/: detect_error.launch  kyoto_detect_error.launch
src/casas/: location.py  objects.py  publish.cfg  publish.py  publish_test.cfg  rabbitmq.py  xmpp.py
src/casas_interface/: .gitattributes  CMakeLists.txt  def.cfg  defintions.txt  from_casas.py  package.xml  to_casas.py
src/casas_interface/launch/: casas.launch
src/find_person/: CMakeLists.txt  package.xml
src/object_detection_msgs/: package.xml
src/ras_msgs/: CMakeLists.txt
src/ras_navigation/: CMakeLists.txt  package.xml
src/ras_navigation_brittany_bk/: .gitignore
src/scheduler/: CMakeLists.txt  README.rst  package.xml  ras_experiment.service
src/scheduler/action/: DoError.action  Goto.action
src/scheduler/launch/: everything.launch  kyoto_ras_experiment_teleop.launch  long_term.launch  lurking_ras.launch  ras_experiment.launch  ras_experiment_teleop.launch  test_ras_experiment.launch
src/scheduler/scripts/: 2manager.py  3manager.py  Decoder.py  _gotoxy_state.py  casas_util.py  findperson_smach.py  goto.py  goto_object_smach.py  gotoxy_state.py  gotoxy_state_seq.py  gotoxy_state_seq2.py  jetson.sh  long_manager.py  manager.py  poweroff.py  ras_run.sh  ras_run.sh.bak  settings.py  tablet_util.py
src/scheduler/scripts/util/: battery_logging.py
srv/: ObjectQuery.srv
testCode/: single_loc.py
(+109 files in other folders)
