<?xml version="1.0"?>
<package format="2">
  <name>scheduler</name>
  <version>0.1.0</version>
  <description>The RAS Scheduler package</description>

  <maintainer email="gabrieledcjr@gmail.com">Gabriel de la Cruz</maintainer>
  <maintainer email="garrett.wilson@wsu.edu">Garrett Wilson</maintainer>
  <maintainer email="christopher.pereyda@wsu.edu">Chris Pereyda</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/WSU-RAS/ras2/wiki</url>

  <author email="gabrieledcjr@gmail.com">Gabriel de la Cruz</author>
  <author email="garrett.wilson@wsu.edu">Garrett Wilson</author>
  <author email="christopher.pereyda@wsu.edu">Chris Pereyda</author>
  <author email="shivam.goel@wsu.edu">Shivam Goel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ras_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>adl_error_detection</build_depend>
  <build_export_depend>ras_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>turtlebot3_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>adl_error_detection</build_export_depend>
  <exec_depend>ras_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>turtlebot3_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>adl_error_detection</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
